fix the layout issues of the about page in so that it is responsive

--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -68,6 +68,7 @@ body {
 }
 .column {
   max-width: 25%;
+  max-height: 100%;
   flex: 25%;
   .fa-solid {
     font-size: 90px;
@@ -82,6 +83,9 @@ body {
   .about-profile {
     max-width: 230px;
     vertical-align: middle;
+  }
+  img {
+    object-fit: cover;
   }
 }
 
@@ -306,6 +310,7 @@ body {
   .column {
     flex: 100%;
     max-width: 100%;
+    max-height: 100%;
   }
 }
 
@@ -314,6 +319,7 @@ body {
   .column {
     flex: 100%;
     max-width: 100%;
+    max-height: 100%;
   }
 
 }
@@ -323,6 +329,7 @@ body {
   .column {
     flex: 50%;
     max-width: 50%;
+    max-height: 100%;
   }
 
 }
@@ -332,6 +339,7 @@ body {
   .column {
     flex: 25%;
     max-width: 25%;
+    max-height: 100%;
   }
 
 }
@@ -341,6 +349,7 @@ body {
   .column {
     flex: 25%;
     max-width: 25%;
+    max-height: 100%;
   }
 
 }
